# Compiler

./: .gitignore  Cargo.toml  README.md
docs/: example1.l
src/: lib.rs  main.rs
src/ast_stuff/: explicate_control.rs  mod.rs  rco.rs
src/codegen_stuff/: allocate_registers.rs  assembly.rs  common.rs  mod.rs  patch_instructions.rs  program_setup.rs  render_x86.rs  select_instructions.rs  type_checking.rs  x86.rs
src/parsing/: lexing.rs  mod.rs  parsing.rs
src/type_stuff/: type_checking.rs
tests/: additional_tests.rs  assignment_4.rs  assignment_5.rs  assignment_6.rs  assignment_7.rs  assignment_additional.rs  syntax_test.rs  utils.rs
tests/assignments/a4/: test1.l  test10.l  test11.l  test2.l  test3.l  test4.l  test5.l  test6.l  test7.l  test8.l  test9.l  test9_original.l
tests/assignments/a5/: test1.l  test2.l  test3.l  test4.l  test5.l  test6.l
tests/assignments/a6/: test1.l  test2.l  test3.l  test4.l  test5.l  test6.l
tests/assignments/a7/: test1.l  test2.l  test3.l  test4.l  test5.l
tests/assignments/additional/: anonymous_subtuple.l  anonymous_subtuple_2.l  not.l
tests/files/: ifs.l  one.l
