[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
lazy_static = "1.5.0"
ordered_hash_map = "0.4.0"
petgraph = "0.7.1"
regex-automata = { version = "0.4.9", features = ["meta"] }
tokio = { version = "1.43.0", features = ["macros", "rt", "rt-multi-thread"] }
